NQE: Handle cases when signal strength is unavailable

When the signal strength for the current network is unavailable,
return the network quality that's fastest among all
cached values. This ensures that the Network Quality
Estimator (NQE) returns a conservative network quality.

Bug: 816976
Change-Id: Ie97290f0a1af63b38183cfeee60c5012d1046643
Reviewed-on: https://chromium-review.googlesource.com/938574
Reviewed-by: Doug Arnett <dougarnett@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539665}
Former-commit-id: d70a5c50a5d8ee8011f2f51ee223bcf79619a5d8