net/nqe/network_quality_store.cc
@@ -70,13 +70,7 @@ bool NetworkQualityStore::GetById(
     nqe::internal::CachedNetworkQuality* cached_network_quality) const {
   DCHECK(thread_checker_.CalledOnValidThread());
 
-  // |matching_it| points to the entry that has the same connection type and
-  // id as |network_id|, and has the signal strength closest to the signal
-  // stength of |network_id|.
-  CachedNetworkQualities::const_iterator matching_it =
-      cached_network_qualities_.end();
-  int matching_it_diff_signal_strength = INT32_MAX;
-
+  // First check if an exact match can be found.
   for (CachedNetworkQualities::const_iterator it =
            cached_network_qualities_.begin();
        it != cached_network_qualities_.end(); ++it) {
@@ -85,20 +79,85 @@ bool NetworkQualityStore::GetById(
       continue;
     }
 
-    if (network_id.signal_strength == INT32_MIN) {
-      // Current network does not have a valid signal strength value. Return the
-      // entry without searching for the entry with the closest signal strength.
-      matching_it = it;
-      break;
+    // Check for an exact match, and return immediately if one is found.
+    // It's possible that the current network does not have signal strength
+    // available. In that case, return the cached network quality when the
+    // signal strength was unavailable.
+    if (network_id.signal_strength == it->first.signal_strength) {
+      *cached_network_quality = it->second;
+      return true;
     }
+  }
+
+  // Handle the case when current network does not have signal strength
+  // available. Return the cached network quality that corresponds to the
+  // highest signal strength. This ensures that the method returns the fastest
+  // network quality possible for the current network, and serves as a
+  // conservative estimate.
+  if (network_id.signal_strength == INT32_MIN) {
+    CachedNetworkQualities::const_iterator matching_it =
+        cached_network_qualities_.end();
+
+    for (CachedNetworkQualities::const_iterator it =
+             cached_network_qualities_.begin();
+         it != cached_network_qualities_.end(); ++it) {
+      if (network_id.type != it->first.type || network_id.id != it->first.id) {
+        // The |type| and |id| must match.
+        continue;
+      }
+
+      // The cached network must have signal strength available. If the cached
+      // signal strength is unavailable, then this case would have been handled
+      // above.
+      DCHECK_NE(INT32_MIN, it->first.signal_strength);
+
+      if (matching_it == cached_network_qualities_.end() ||
+          it->first.signal_strength > matching_it->first.signal_strength) {
+        matching_it = it;
+      }
+    }
+
+    if (matching_it == cached_network_qualities_.end())
+      return false;
+
+    *cached_network_quality = matching_it->second;
+    return true;
+  }
+
+  // Finally, handle the case where the current network has a valid signal
+  // strength, but there is no exact match.
+
+  // |matching_it| points to the entry that has the same connection type and
+  // id as |network_id|, and has the signal strength closest to the signal
+  // stength of |network_id|.
+  CachedNetworkQualities::const_iterator matching_it =
+      cached_network_qualities_.end();
+  int matching_it_diff_signal_strength = INT32_MAX;
+
+  // Find the closest estimate.
+  for (CachedNetworkQualities::const_iterator it =
+           cached_network_qualities_.begin();
+       it != cached_network_qualities_.end(); ++it) {
+    if (network_id.type != it->first.type || network_id.id != it->first.id) {
+      // The |type| and |id| must match.
+      continue;
+    }
+
+    DCHECK_LE(0, network_id.signal_strength);
 
     // Determine if the signal strength of |network_id| is closer to the
     // signal strength of the network at |it| then that of the network at
     // |matching_it|.
     int diff_signal_strength =
         std::abs(network_id.signal_strength - it->first.signal_strength);
-    if (it->first.signal_strength == INT32_MIN)
+    if (it->first.signal_strength == INT32_MIN) {
+      // Current network has signal strength available. However, the persisted
+      // network does not. Set the |diff_signal_strength| to INT32_MAX. This
+      // ensures that if an entry with a valid signal strength is found later
+      // during iteration, then that entry will be used. If no entry with valid
+      // signal strength is found, then this entry will be used.
       diff_signal_strength = INT32_MAX;
+    }
 
     if (matching_it == cached_network_qualities_.end() ||
         diff_signal_strength < matching_it_diff_signal_strength) {
