net/nqe/network_quality_store_unittest.cc
@@ -204,18 +204,19 @@ TEST(NetworkQualityStoreTest, TestCachingClosestSignalStrength) {
   }
 
   {
-    // Existing entry will be read for (2G, "test1", INT32_MIN).
-    // The first entry in the store matching (2G, "test1", *) would be returned.
+    // When the current network does not have signal strength available, then
+    // the cached value that corresponds to maximum signal strength should be
+    // returned.
     int32_t signal_strength = INT32_MIN;
+    nqe::internal::CachedNetworkQuality expected_cached_network_quality =
+        cached_network_quality_strength_3;
     nqe::internal::NetworkID network_id(NetworkChangeNotifier::CONNECTION_2G,
                                         "test1", signal_strength);
     nqe::internal::CachedNetworkQuality read_network_quality;
     EXPECT_TRUE(
         network_quality_store.GetById(network_id, &read_network_quality));
-    EXPECT_TRUE((cached_network_quality_strength_1.network_quality() ==
-                 read_network_quality.network_quality()) ||
-                (cached_network_quality_strength_3.network_quality() ==
-                 read_network_quality.network_quality()));
+    EXPECT_EQ(expected_cached_network_quality.network_quality(),
+              read_network_quality.network_quality());
   }
 
   {
@@ -227,6 +228,85 @@ TEST(NetworkQualityStoreTest, TestCachingClosestSignalStrength) {
         network_quality_store.GetById(network_id, &read_network_quality));
   }
 }
+
+TEST(NetworkQualityStoreTest, TestCachingUnknownSignalStrength) {
+  nqe::internal::NetworkQualityStore network_quality_store;
+  base::SimpleTestTickClock tick_clock;
+
+  // Cached network quality for network with NetworkID (2G, "test1").
+  const nqe::internal::CachedNetworkQuality
+      cached_network_quality_strength_unknown(
+          tick_clock.NowTicks(),
+          nqe::internal::NetworkQuality(base::TimeDelta::FromSeconds(1),
+                                        base::TimeDelta::FromSeconds(1), 1),
+          EFFECTIVE_CONNECTION_TYPE_2G);
+
+  const nqe::internal::CachedNetworkQuality cached_network_quality_strength_3(
+      tick_clock.NowTicks(),
+      nqe::internal::NetworkQuality(base::TimeDelta::FromSeconds(3),
+                                    base::TimeDelta::FromSeconds(3), 3),
+      EFFECTIVE_CONNECTION_TYPE_2G);
+
+  {
+    // Entry will be added for (2G, "test1") with signal strength value of
+    // INT32_MIN.
+    nqe::internal::NetworkID network_id(NetworkChangeNotifier::CONNECTION_2G,
+                                        "test1", INT32_MIN);
+    nqe::internal::CachedNetworkQuality read_network_quality;
+    network_quality_store.Add(network_id,
+                              cached_network_quality_strength_unknown);
+    EXPECT_TRUE(
+        network_quality_store.GetById(network_id, &read_network_quality));
+    EXPECT_EQ(cached_network_quality_strength_unknown.network_quality(),
+              read_network_quality.network_quality());
+  }
+
+  {
+    // Entry will be added for (2G, "test1") with signal strength value of 3.
+    nqe::internal::NetworkID network_id(NetworkChangeNotifier::CONNECTION_2G,
+                                        "test1", 3);
+    nqe::internal::CachedNetworkQuality read_network_quality;
+    network_quality_store.Add(network_id, cached_network_quality_strength_3);
+    EXPECT_TRUE(
+        network_quality_store.GetById(network_id, &read_network_quality));
+    EXPECT_EQ(cached_network_quality_strength_3.network_quality(),
+              read_network_quality.network_quality());
+  }
+
+  {
+    // Now with cached entries for signal strengths INT32_MIN and 3, verify
+    // across the range of strength values that the closest value match will be
+    // returned when looking up (2G, "test1", signal_strength).
+    for (int32_t signal_strength = 0; signal_strength <= 4; ++signal_strength) {
+      nqe::internal::CachedNetworkQuality expected_cached_network_quality =
+          cached_network_quality_strength_3;
+      nqe::internal::NetworkID network_id(NetworkChangeNotifier::CONNECTION_2G,
+                                          "test1", signal_strength);
+      nqe::internal::CachedNetworkQuality read_network_quality;
+      EXPECT_TRUE(
+          network_quality_store.GetById(network_id, &read_network_quality));
+      EXPECT_EQ(expected_cached_network_quality.network_quality(),
+                read_network_quality.network_quality());
+    }
+  }
+
+  {
+    // When the current network does not have signal strength available, then
+    // the cached value that corresponds to unknown signal strength should be
+    // returned.
+    int32_t signal_strength = INT32_MIN;
+    nqe::internal::CachedNetworkQuality expected_cached_network_quality =
+        cached_network_quality_strength_unknown;
+    nqe::internal::NetworkID network_id(NetworkChangeNotifier::CONNECTION_2G,
+                                        "test1", signal_strength);
+    nqe::internal::CachedNetworkQuality read_network_quality;
+    EXPECT_TRUE(
+        network_quality_store.GetById(network_id, &read_network_quality));
+    EXPECT_EQ(expected_cached_network_quality.network_quality(),
+              read_network_quality.network_quality());
+  }
+}
+
 // Tests if the cache size remains bounded. Also, ensure that the cache is
 // LRU.
 TEST(NetworkQualityStoreTest, TestLRUCacheMaximumSize) {
